# InvestmentB_RAG_Bot

./: README.md  app.py  pyproject.toml  run.py
src/investment_rag_bot/: __init__.py  config.py  embeddings.py  llm.py  pdf_processor.py  rag_engine.py  vector_store.py
